...
                android:background="@color/amber"
                android:gravity="center"
                android:orientation="vertical">


                <com.example.avjindersinghsekhon.minimaltodo.Utility.CustomTextInputLayout
                    android:id="@+id/toDoCustomTextInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    app:hintTextAppearance="@style/FloatingLabelTextAppearance">

                    <EditText
                        android:id="@+id/userToDoEditText"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginLeft="32dp"
                        android:layout_marginRight="32dp"
                        android:gravity="start|bottom"
                        android:hint="@string/title"
...
                </com.example.avjindersinghsekhon.minimaltodo.Utility.CustomTextInputLayout>

            </LinearLayout>


            <com.example.avjindersinghsekhon.minimaltodo.Utility.CustomTextInputLayout
                android:id="@+id/toDoCustomTextInput01"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:gravity="center"
                android:paddingTop="20dp"
                app:hintTextAppearance="@style/FloatingLabelTextAppearance">

                <EditText
                    android:id="@+id/userToDoDescription"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginLeft="32dp"
                    android:layout_marginRight="32dp"
                    android:layout_weight="0"
                    android:gravity="start|bottom"
...
                    android:scrollbars="vertical"
                    android:textColor="@color/icons" />

            </com.example.avjindersinghsekhon.minimaltodo.Utility.CustomTextInputLayout>

            <LinearLayout
                android:id="@+id/todoReminderAndDateContainerLayout"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.5"
                android:orientation="vertical">


...
                        android:paddingTop="8dp"
                        android:text="@string/remind_me"
                        android:textColor="@color/secondary_text"
                        android:textSize="16sp" />

                    <android.support.v7.widget.SwitchCompat
                        android:id="@+id/toDoHasDateSwitchCompat"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:padding="8dp" />

                    <Button
                        android:id="@+id/copyclipboard"
                        android:layout_width="0dp"
                        android:layout_height="28dp"
                        android:layout_margin="8dp"
                        android:layout_weight=".37"
                        android:background="@drawable/ic_content_copy_black_24dp"
                        android:backgroundTint="@color/grey600"
                        android:padding="8dp"
                        android:visibility="visible" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/toDoEnterDateLinearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginLeft="36dp"
                    android:layout_marginRight="36dp"
                    android:layout_weight="1"
                    android:animateLayoutChanges="true"
...
                            android:gravity="center"
                            android:padding="4dp"
                            android:text="\@"
                            android:textColor="?attr/colorAccent" />

                        <EditText
                            android:id="@+id/newTodoTimeEditText"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:editable="false"
                            android:focusable="false"
                            android:focusableInTouchMode="false"
...
                            android:textIsSelectable="false" />


                    </LinearLayout>

                    <TextView
                        android:id="@+id/newToDoDateTimeReminderTextView"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="2"
                        android:gravity="start"
                        android:text="@string/remind_date_and_time"
                        android:textColor="@color/secondary_text"
...

            </LinearLayout>

        </LinearLayout>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/makeToDoFloatingActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:src="@drawable/ic_send_white_18dp"
            app:fabSize="normal"
...
