...
              android:orientation="vertical"
              android:gravity="center"
              android:layout_height="match_parent">

    <!--<include layout="@layout/base_toolbar"/>-->
    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/myCoordinatorLayout"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="match_parent"
        >

        <LinearLayout
...


        <!--</android.support.design.widget.AppBarLayout>-->


        <com.example.avjindersinghsekhon.minimaltodo.Utility.RecyclerViewEmptySupport
            android:id="@+id/toDoRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#00856868"
            app:layout_anchor="@+id/toDoEmptyView"
            app:layout_anchorGravity="center"
            app:layout_behavior="@string/appbar_scrolling_view_behavior" />

        <android.support.design.widget.FloatingActionButton
            android:src="@drawable/ic_add_white_24dp"
            android:id="@+id/addToDoItemFAB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:layout_anchor="@id/myCoordinatorLayout"
            app:layout_anchorGravity="bottom|right|end"

...
