<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:id="@+id/listItemLinearLayout"
              android:layout_marginBottom="1dp"
              android:gravity="center"
              android:orientation="horizontal"
              android:layout_height="wrap_content"
              xmlns:tools="http://schemas.android.com/tools">

...
        android:gravity="center"
        android:layout_height="?android:attr/listPreferredItemHeight">

        <TextView
            android:layout_alignParentTop="true"
            tools:ignore="MissingPrefix"
            android:id="@+id/toDoListItemTextview"
            android:lines="1"
            android:gravity="start|bottom"
            android:textColor="@color/secondary_text"
            android:ellipsize="end"
            android:textSize="16sp"
            android:text="Clean your room"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <TextView
            android:layout_below="@id/toDoListItemTextview"
            android:id="@+id/todoListItemTimeTextView"
            android:text="27 Sept 2015, 22:30"
            android:textColor="?attr/colorAccent"
            android:textSize="12sp"
            android:gravity="start|center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
...
