<?xml version="1.0" encoding="utf-8"?>

<androidx.appcompat.widget.Toolbar xmlns:tools="http://schemas.android.com/tools"
                                   tools:ignore="MissingPrefix"
                                   xmlns:android="http://schemas.android.com/apk/res/android"
                                   android:id="@+id/toolbar"
                                   android:minHeight="?attr/actionBarSize"
                                   android:background="?attr/colorPrimary"
                                   android:layout_width="match_parent"
                                   android:layout_height="wrap_content">

    <!--<TextView-->
    <!--android:textSize="24sp"-->
    <!--android:layout_gravity="center"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:textColor="@android:color/white"-->
    <!--android:text="Toodle"-->
    <!--fontPath="fonts/Aller_Regulat.ttf"-->
    <!--android:padding="8dp"-->
    <!--android:layout_height="wrap_content" />-->

</androidx.appcompat.widget.Toolbar>

